<resources>
    <string name="app_name">RCCG GOSHEN CHURCH</string>
    <string name="title_activity_signup">Signup Activity</string>
    <string name="some_error">There was an error processing request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="forum_title">Forum</string>
    <string name="media_title">Media</string>
    <string name="publications_title">Publications</string>
    <string name="store_title">Store</string>
</resources>
